--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -1,3 +1,6 @@
+server:
+  port: 8002
+
 spring:
   application:
     name: audit-transaction-service
@@ -5,14 +8,43 @@ spring:
     default-property-inclusion: NON_NULL
   data:
     mongodb:
-      host: localhost
+      host: mongo
       port: 27017
       authentication-database: admin
       username: root
       password: example
       database: auditdb
   kafka:
-    bootstrap-servers: localhost:9092
+    bootstrap-servers: kafka:29092
+    admin:
+      client-id: admin
+
+management:
+  tracing:
+    sampling:
+      probability: 1.0
+  endpoints:
+    web:
+      exposure:
+        include: '*'
+  endpoint:
+    health:
+      show-details: always
+  metrics:
+    enable:
+      jvm: true
+    export:
+      prometheus:
+        enabled: true
+    tags:
+      application: audit-transaction-service
+    distribution:
+      slo:
+        http: '5ms,10ms,25ms,50ms,100ms,200ms,300ms,400ms,500ms,1s,2s'
+      percentiles-histogram:
+        http:
+          server:
+            requests: true
 
 logging:
   file:
@@ -20,5 +52,12 @@ logging:
   pattern:
     level: '%5p [${spring.application.name:},%X{traceId:-},%X{spanId:-}]'
 
-server:
-  port: 8002
+
+info:
+  app:
+    name: '@project.name@'
+    description: '@project.description@'
+    version: '@project.version@'
+    encoding: '@project.build.sourceEncoding@'
+    java:
+      version: '@java.version@'
